fixing the letter spacing

--- a/GuessTheNumber/css/styles.css
+++ b/GuessTheNumber/css/styles.css
@@ -16,6 +16,7 @@ html{
     font-style: normal;
     font-size: 55px;
     margin-top: 2em;
+    letter-spacing: 5.5px;
 }
 .user-guess-container{
     width: 75%;
